# quote-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-285604e7d936f3b39fbd1381bcf1f455095e72b3224f4c5df5454a6496452d0e.json  query-4e58e7d0d1731e007bde42786627ac3bfe0797646530d73764ddb4052800147c.json  query-7369fadfa3666efde5150ce941454fb860eb980a6dfcac0caaa161b68afcb60a.json  query-97a6f9955005c6e0063fd9304e130b062517676c28088b3cbf9fb1534b88ddb4.json  query-b6be30ce092134ede4b45143af8d5face627cbb7c575ac2d0f0500f26c45f99c.json
assets/static/: quote..css  quote.css
assets/templates/: index.html
migrations/: 0001_create.up.sql  0002_full_quotes.down.sql  20250521005313_init.sql
quote-client/: Cargo.toml  index.css  index.html
quote-client/src/: main.rs  quote.rs
server/: .gitignore  Cargo.toml
server/.sqlx/: query-17a42204ee668eddd2f18b50b4b38fb17510363f2184c9498a46ad15952aa195.json  query-dc3f268940869d894e146da661a2e67c3601d0a52d0ac0c869eece358c9506ae.json  query-eee94d4c3032a2db1421b564856a99bf9921bd48f98ebd7b87ae4e69bcf1480a.json
server/assets/static/: quotes.json
server/migrations/: 0002_full_quotes.up.sql
server/src/: add-quote.sh  api.rs  authjwt.rs  main.rs  quote.rs  templates.rs
src/: error.rs  main.rs  quote.rs  templates.rs  web.rs
