[package]
name = "quote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.1"
axum = "0.8.3"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
derive = "1.0.0"
fastrand = "2.3.0"
json = "0.12.4"
migrate = "0.2.1"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["chrono", "derive", "json", "macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing-subscriber = "0.3.19"
