[package]
name = "quote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.1"
axum = "0.8.3"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
derive = "1.0.0"
fastrand = "2.3.0"
json = "0.12.4"
log = "0.4.27"
migrate = "0.2.1"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["chrono", "derive", "json", "macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
